--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+# --- API Keys ---
+# Set all of the api keys for the API to work correctly
 LANGSMITH_API_KEY=your_langsmith_key
 OPENAI_API_KEY=your_openai_key
 DIDAR_API_KEY=your_didar_key
+
+# --- Authorization System Settings ---
+# AUTH_SECRET_KEY : The Keyword used for token generation and encryption, CHANGE IT
+# AUTH_ALGORITHM : The algorithm used by the authentication process
+# AUTH_TOKEN_EXPIRE : The time a generated token is valid for in minutes
+AUTH_SECRET-KEY=default-key
+AUTH_ALGORITHM=HS256
+AUTH_TOKEN_EXPIRE=120
