Fixes to environment variables

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ LANGSMITH_API_KEY=your_langsmith_key
 OPENAI_API_KEY=your_openai_key
 DIDAR_API_KEY=your_didar_key
 
+# --- URIs ---
+# Set all of URIs for APIs and Databases
+#DIDAR_URI=
+MONGO_URI=mongodb://localhost:27017/
+
 # --- Authorization System Settings ---
 # AUTH_SECRET_KEY : The Keyword used for token generation and encryption, CHANGE IT
 # AUTH_ALGORITHM : The algorithm used by the authentication process
