--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      LANGSMITH_API_KEY: ${{ secrets.LANGSMITH_API_KEY }}
+      DIDAR_API_KEY: ${{ secrets.DIDAR_API_KEY }}
+      AUTH_SECRET_KEY: ${{ secrets.AUTH_SECRET_KEY }}
+      AUTH_ALGORITHM: ${{ secrets.AUTH_ALGORITHM }}
+      AUTH_TOKEN_EXPIRE: ${{ secrets.AUTH_TOKEN_EXPIRE }}
+      
 
     steps:
       - name: Checkout code
@@ -28,3 +36,17 @@ jobs:
       - name: Run tests
         run: |
           PYTHONPATH=. pytest tests/
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Docker image
+        run: |
+          docker build -t bmdarklight/crm-chatbot-api:latest .
+
+      - name: Push Docker image
+        run: |
+          docker push bmdarklight/crm-chatbot-api:latest
