--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,39 @@
 version: "3.9"
 
 services:
-  crm-chatbot-api:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: crm-chatbot-api
+  app:
+    build: .
+    container_name: fastapi-app
     ports:
       - "8000:8000"
-    env_file:
-      - .env
+    depends_on:
+      - mongodb
+      - qdrant
+    environment:
+      - MONGO_URI=mongodb://mongodb:27017
+      - QDRANT_URL=http://qdrant:6333
     volumes:
       - .:/app
-    restart: unless-stopped
+    restart: always
+
+  mongodb:
+    image: mongo:6.0
+    container_name: mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+    restart: always
+
+  qdrant:
+    image: qdrant/qdrant:v1.7.3
+    container_name: qdrant
+    ports:
+      - "6333:6333"
+    volumes:
+      - qdrant_data:/qdrant/storage
+    restart: always
+
+volumes:
+  mongo_data:
+  qdrant_data:
