--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,16 @@ MONGO_URI=mongodb://localhost:27017/
 AUTH_SECRET-KEY=default-key
 AUTH_ALGORITHM=HS256
 AUTH_TOKEN_EXPIRE=1440
+
+# --- Tracing Settings ---
+# LANGSMITH_PROJECT_NAME : The name of the project in LangSmith
+# LANGSMITH_RUN_NAME : The name of the run in LangSmith
+# LANGSMITH_RUN_DESCRIPTION : The description of the run in LangSmith
+# LANGSMITH_TAGS : Tags for the run in LangSmith, comma-separated
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_PROJECT_NAME=crm-chatbot-agent
+LANGSMITH_RUN_NAME=crm-chatbot-agent-run
+LANGSMITH_RUN_DESCRIPTION=CRM Chatbot Agent Run
+LANGSMITH_TAGS=crm,chatbot,agent
+LANGCHAIN_TRACING_V2=true
