--- a/.gitignore
+++ b/.gitignore
@@ -206,5 +206,23 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-# MacOS specific file
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+.idea
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
